<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Registration"
    >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/whiteBackgorund"
       android:orientation="vertical">
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardUseCompatPadding="true"
           app:cardBackgroundColor="@color/whiteBackgorund"
           android:elevation="4dp"
           >


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:layout_margin="15dp"

               >
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   >

                   <TextView
                       android:id="@+id/textView1"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:hint="@string/registration"
                       android:textSize="28sp"
                       android:textStyle="bold"
                       android:textColorHint="@color/TextView"
                       />
                   <TextView
                       android:id="@+id/txtLogin"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/login"
                       android:textSize="20sp"
                       android:textStyle="bold"
                       android:textColor="@color/colorPrimary"
                       android:layout_alignParentRight="true"
                       android:layout_marginTop="4dp"

                       />
               </RelativeLayout>


               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/In_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textStyle="bold"
                   app:hintTextColor="@color/TextView"
                    app:boxStrokeColor="@color/stoke"
                   android:hint="@string/name"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_marginTop="40dp">
                   <EditText
                       android:id="@+id/ed_name"
                       android:textStyle="bold"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPersonName" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/In_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                  app:hintTextColor="@color/TextView"
                app:boxStrokeColor="@color/stoke"
                   android:hint="@string/email"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_marginTop="10dp">


                   <EditText
                       android:id="@+id/ed_email"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textEmailAddress" />
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/In_username"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:hintTextColor="@color/TextView"
                   app:boxStrokeColor="@color/stoke"
                   android:hint="@string/username"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_marginTop="10dp">
                   <EditText
                       android:id="@+id/ed_username"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="text" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/In_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                  app:hintTextColor="@color/TextView"
                app:boxStrokeColor="@color/stoke"
                   android:hint="@string/password"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   app:passwordToggleEnabled="true">

                   <EditText
                       android:id="@+id/ed_password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:ems="10"
                       android:inputType="textPassword" />
               </com.google.android.material.textfield.TextInputLayout>


               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/In_Referral"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:hint="@string/referal_code"
                  app:hintTextColor="@color/TextView"
                app:boxStrokeColor="@color/stoke"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   app:passwordToggleEnabled="true">


                   <EditText
                       android:id="@+id/ed_referral_code"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:ems="10"
                       android:inputType="textPassword" />
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/In_country_code"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                  app:hintTextColor="@color/TextView"
                app:boxStrokeColor="@color/stoke"
                   android:hint="@string/country_code"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_marginTop="10dp">

                   <EditText
                       android:id="@+id/country_code"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:ems="10"
                       android:inputType="text" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/In_phone"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                  app:hintTextColor="@color/TextView"
                app:boxStrokeColor="@color/stoke"
                   android:hint="@string/phone"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_marginTop="10dp">

                   <EditText

                       android:id="@+id/phone"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:ems="10"
                       android:inputType="number" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/In_Country"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                  app:hintTextColor="@color/TextView"
                app:boxStrokeColor="@color/stoke"
                   android:hint="@string/country"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_marginTop="10dp">

                   <EditText

                       android:id="@+id/country"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:ems="10"

                       android:inputType="text" />
               </com.google.android.material.textfield.TextInputLayout>




               <Button
                   android:id="@+id/btn_register"
                   android:backgroundTint="@color/colorPrimary"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@android:color/white"
                   android:textSize="20dp"
                   android:layout_marginTop="32dp"
                   android:padding="15dp"
                   android:text="@string/registration"
                   />

               <TextView
                   android:id="@+id/respones"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"

                   android:textSize="12sp"
                   android:textStyle="bold"
                   android:textColor="#333"
                   android:layout_marginTop="4dp"
                   />


           </LinearLayout>
       </androidx.cardview.widget.CardView>






   </LinearLayout>
</ScrollView>