<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Login"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBackgorund"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/whiteBackgorund"
        android:elevation="4dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/welcome"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textColorHint="@color/TextView"


                    />
                <TextView
                    android:id="@+id/txtsignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signUp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="4dp"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sign_to"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"


                />

            <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/stoke"
                app:boxStrokeColor="@color/TextView"
                android:hint="@string/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="40dp">



                <EditText
                    android:id="@+id/ed_username1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"


                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hintTextColor="@color/TextView"
                app:boxStrokeColor="@color/stoke"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ed_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:id="@+id/btn_login"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_marginTop="32dp"
                android:padding="15dp"
                android:text="@string/login"
                />

            <!--<RelativeLayout
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_gravity="center"
                android:background="@drawable/spinner_background"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/dialog_language"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:dropDownVerticalOffset="35dp"
                    android:popupBackground="#2196F3"
                    android:textColor="@color/black"
                    android:text="@string/selectedlanguage" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/drop" />

            </RelativeLayout>-->
            <androidx.appcompat.widget.SwitchCompat
                android:textStyle="bold"
                android:id="@+id/switchCompat"
                android:text="@string/text"
                android:textSize="15dp"
                android:padding="10dp"
                app:switchPadding="10dp"
                android:checked="false"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/respones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/TextView"
                android:layout_marginTop="4dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>





</LinearLayout>
</ScrollView>